# MyDocsMCP

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package.json  pyproject.toml  test_e2e.py
docs/: MCP_Server_para_Acervo_de_PDFs.md
docs/superpowers/plans/: 2026-03-26-fiap-pdf-mcp.md
src/: config.py  server.py  watcher.py
src/ingestion/: chunker.py  embedder.py  extractor.py  pipeline.py
src/retrieval/: searcher.py
tests/: test_chunker.py  test_embedder.py  test_ingestion.py  test_pipeline.py  test_tools.py
