[project]
name = "mydocsmcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.5",
    "fastmcp>=3.1.1",
    "langchain-text-splitters>=1.1.1",
    "numpy>=2.4.3",
    "pymupdf>=1.27.2.2",
    "pytest>=9.0.2",
    "sentence-transformers>=5.3.0",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.7",
]
